XMl Shell command "cd" does not handle "/" at end of path

For https://bugzilla.gnome.org/show_bug.cgi?id=731832
small fix